# cmc-comments

./: .gitignore  ACCOUNT_ROTATION_DISABLED.md  AUTOMATED_ACCOUNT_SYSTEM_README.md  BACKUP_FILTERING_FIX.md  BLACKROCK_OPTIMIZATION_SUMMARY.md  CMC_BYPASS_SUCCESS_REPORT.md  CMC_COIN_POSTS_BOT_README.md  CMC_LOGIN_DETECTION_SYSTEM.md  CMC_PROFILE_BOT_SUMMARY.md  COMPLETE_CMC_POSTING_WORKFLOW.py  COMPLETE_LOGIN_DETECTION_SUMMARY.md  COMPLETE_TIME_SAVING_SOLUTION.md  CTO_EMERGENCY_PROXY_FIX_GUIDE.md  ENHANCED_SIMPLELOGIN_OPTIMIZATION_PLAN.md  FOCUS_FIX_APPLIED.md  ISSUE_FIXED_SUMMARY.md  LIKE_STACKING_BOT_SUMMARY.md  LOGIN_DETECTION_FIX_SUMMARY.md  PRODUCTION_READY_SHOWCASE.md  PROFILE_ROTATION_SUMMARY.md  PROFILE_USAGE_GUIDE.md  QUICK_START_GUIDE.md  SESSION_CLEANUP_SUMMARY.md  SIMPLELOGIN_ANALYSIS.md  STRUCTURED_ROTATION_SETUP_GUIDE.md  analysis_alchemy pay.txt  analysis_bnb.txt  analysis_golem.txt  analysis_pi [iou].txt  analysis_solana.txt  analysis_space id.txt  analysis_ultima.txt  blackrock_automation_optimizer.py  blackrock_infrastructure_manager.py  cleanup_chrome_sessions.py  cmc_login_detector.py  cmc_page_source.html  cmc_profile_interaction_bot.py  coin_posts_bot.py  demo_enhanced_features.py  (+61 more)
analysis_data/variations/: ADA_20250622_214639_v1.txt  AGT_20250625_140813_v1.txt  Aptos_20250621_143505_v1.txt  Aptos_20250621_143505_v2.txt  Aptos_20250621_143505_v3.txt  BITCOINBTC_20250622_193151_v1.txt  BITCOINCASHBCH_20250622_205821_v1.txt  BNBBNB_20250622_204112_v1.txt  BNB_20250622_170845_v1.txt  BNB_20250622_215232_v1.txt  BNB_20250625_190821_v1.txt  BNB_20250625_193240_v1.txt  BNB_20250627_110556_v1.txt  BTC_20250622_213505_v1.txt  BTC_20250622_220342_v1.txt  BTC_20250622_223114_v1.txt  BTC_20250622_224952_v1.txt  BTC_20250624_074852_v1.txt  BTC_20250624_154950_v1.txt  BTC_20250624_165434_v1.txt  BTC_20250624_170130_v1.txt  BTC_20250624_171556_v1.txt  BTC_20250624_175948_v1.txt  BTC_20250624_182306_v1.txt  BTC_20250624_193924_v1.txt  BTC_20250624_194817_v1.txt  BTC_20250624_212142_v1.txt  (+118 more)
autocrypto_social_bot/: .env  README_AI_REVIEWS.md  cmc_bypass_manager.py  cmc_login_detector.py  debug_ai_button.py  enhanced_multi_tab_registration.py  enhanced_profile_manager.py  import_profile.py  login_to_cmc.py  main.py  menu.py  open_profile.py  requirements.txt  setup_profile.py  simplelogin_alias_manager.py  simplified_menu.py  structured_profile_rotation.py  test_ai_review.py  test_anti_detection.py  test_chrome.py  test_chrome_detailed.py  test_integration.py
config/: accounts.db  enterprise_proxy_config.json  manual_proxies.txt  promotion_config.json  proxy_config.json  working_proxies.json
unused_files/: README.md
(+2182 files in other folders)
