[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-automation-bot"
version = "1.0.0"
description = "Automated social media bot for CoinMarketCap engagement"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "OnchainAlpha"}
]
keywords = ["automation", "coinmarketcap", "social-media", "bot", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.0.0",
    "undetected-chromedriver>=3.5.0",
    "requests>=2.25.0",
    "colorama>=0.4.4",
    "python-dotenv>=0.19.0",
    "psutil>=5.8.0",
    "proxyscrape>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/OnchainAlpha/cmc-comments"
"Bug Reports" = "https://github.com/OnchainAlpha/cmc-comments/issues"
Source = "https://github.com/OnchainAlpha/cmc-comments"
Documentation = "https://github.com/OnchainAlpha/cmc-comments/blob/main/README.md"

[project.scripts]
cmc-bot = "run_simple_menu:main"
cmc-automation = "autocrypto_social_bot.simplified_menu:main_menu"

[tool.setuptools.packages.find]
where = ["."]
include = ["autocrypto_social_bot*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
autocrypto_social_bot = [
    "config/*.json",
    "config/*.txt",
    "*.md",
]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by a single or double quote must be a valid Python regex
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | chrome_profiles
    | temp_chrome_profile
  )/
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 